fixed layout shift

--- a/src/Pages/MainPages.css
+++ b/src/Pages/MainPages.css
@@ -11,5 +11,5 @@
   display: flex;
   justify-content: space-around;
   box-shadow: -20px 20px rgba(0, 0, 0, 0.418);
-
+  height: 46vh;
 }
