--- a/src/components/ProjectsSection/ProjectsSection.css
+++ b/src/components/ProjectsSection/ProjectsSection.css
@@ -2,8 +2,8 @@
   width: 15%;
   margin: 10px;
   padding: 10px;
-  border-radius: 20px;
-  background-color: #00000070;
+  border-radius: 5px;
+  background-color: #27272762;
 }
 
 #notexisting {
@@ -14,19 +14,18 @@
   width: 20%;
   margin: 10px;
   padding: 10px;
-  border-radius: 20px;
-  background-color: #000000;
+  border-radius: 5px;
+  background-color: #27272762;
 }
 
-#stateDiv {
-  display: flex;
-  align-items: center;
+#project-info {
+  padding: 10px;
 }
-#stateIndication {
-  display: block;
-  content: ' ';
-  margin-right: 20px;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
+
+#project-info-focus {
+  width: 100%;
+  padding: 10px;
+  background-color: #210291;
+  border-radius: 2px;
+  transition: all 200ms linear;
 }
